--- a/Student-s-Details-Using-Face-Recognition-main/Registration.html
+++ b/Student-s-Details-Using-Face-Recognition-main/Registration.html
@@ -27,7 +27,7 @@
             <input type="url" name="certificate" placeholder="Certificate Link" required>
             <label for="fileToUpload">Select image to upload:</label>
             <em>Name your image in this format "Uniqueid Name"</em>
-            <em>Example - "2016950 RIDDHI SHIVHARE.jpeg"</em>
+            <em>Example - "2219866.jpeg VAISHNAVI"</em>
             <input type="file" name="fileToUpload" id="fileToUpload" required>
             <button type="submit">Submit</button>
         </form>
